# apex

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apex_predict/: auth.py  config.py  db.py  enums.py  models.py  schemas.py
apex_predict/api/: __init__.py  deps.py  main.py  routes_v1.py
apex_predict/providers/: __init__.py  base.py  fallback.py  openf1.py  router.py
apex_predict/services/: __init__.py  ai.py  ingestion.py  leaderboard.py  moderation.py  scoring.py
apex_predict/worker/: __init__.py  jobs.py  main.py  scheduler.py
docs/: IMPLEMENTATION_STATUS.md
infra/migrations/: 001_init.sql  002_supabase_auth_rls.sql  003_rls_hardening_all_public.sql  004_fix_function_search_path.sql  005_enable_realtime_leaderboard_snapshots.sql
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/models/: types.dart
mobile/lib/screens/: home_screen.dart  leaderboard_screen.dart  predictions_screen.dart  profile_screen.dart
mobile/lib/services/: api_client.dart
scripts/: seed_demo_data.py
tests/: conftest.py  test_ai.py  test_auto_finalize.py  test_leagues.py  test_predictions.py  test_scoring.py
tests/fuzz/: test_input_fuzz.py
tests/load/: locustfile.py
tests/security/: test_penetration.py  test_security_controls.py
tests/unit/: test_ingestion_mapping.py  test_scoring_math.py  test_worker_scheduler.py
